# dolfinx-utils

./: .gitlab-ci.yml  CMakeLists.txt
cmake/templates/: DOLFINX-UTILSConfig.cmake.in
src/: CMakeLists.txt  DirichletBCDefinitions.h  TimeDependentFunction.h  TimeIntervals.cpp  TimeIntervals.h  area.py  assembleSolve.cpp  assembleSolve.h  computeArea.cpp  computeArea.h  computeHmin.cpp  computeHmin.h
